# coop

./: meson.build
docs/: file-summary.md
example/: main.cpp  pipe-test.cpp
include/coop/: assert-def.hpp  assert-undef.hpp  assert.hpp  atomic-event.hpp  blocker-pre.hpp  blocker.hpp  cohandle.hpp  event-pre.hpp  event.hpp  generator-pre.hpp  generator.hpp  io-pre.hpp  io.hpp  lock-guard.hpp  multi-event-pre.hpp  multi-event.hpp  mutex-pre.hpp  mutex.hpp  parallel-pre.hpp  parallel.hpp  pipe-unix.hpp  pipe-windows.hpp  pipe.hpp  promise.hpp  recursive-blocker-pre.hpp  recursive-blocker.hpp  runner-pre.hpp  runner.hpp  select.hpp  single-event-pre.hpp  single-event.hpp  task-handle-pre.hpp  task-injector-pre.hpp  task-injector.hpp  thread-event-pre.hpp  thread-event-unix.hpp  thread-event-windows.hpp  thread-event.hpp  thread-pre.hpp  thread.hpp  (+2 more)
